<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_edit"/>

        //full Name
        <TextView
            android:id="@+id/txtFull"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/full_name"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:textStyle="bold" />

        //First Name
        <TextView
            android:id="@+id/txtFirst"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/black"
            android:drawableLeft="@drawable/ic_baseline_account_box_24"
            android:drawablePadding="10dp"
            android:text="@string/first_name"
            android:textColor="@color/black"
            android:textSize="24dp" />

        //Last Name
        <TextView
            android:id="@+id/txtLast"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/ic_baseline_account_box_24"
            android:drawablePadding="10dp"
            android:text="@string/last_name"
            android:textColor="@color/black"
            android:textSize="24dp" />

        //phone
        <TextView
            android:id="@+id/txtPhone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/ic_baseline_phone_iphone_24"
            android:drawablePadding="10dp"
            android:text="@string/phone"
            android:textColor="@color/black"
            android:textSize="24dp" />

        //email
        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="10dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="24dp" />

        //button Edit
        <Button
            android:id="@+id/btnEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_edit"/>
        //button Change Password
        <Button
            android:id="@+id/btnchp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chang_pass"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edit"/>

        //button Logout
        <Button
            android:id="@+id/btnLogOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_marginLeft="130dp"
            android:layout_marginRight="130dp"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edit"/>
    </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>