<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Edit_Profile">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        //Image
        <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_edit"/>

        //First Name
        <EditText
            android:id="@+id/etFirst"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/ic_baseline_account_box_24"
            android:drawablePadding="10dp"
            android:hint="@string/first_name"
            android:textColor="@color/black"
            android:textSize="24dp" />

        //Last Name
        <EditText
            android:id="@+id/etLast"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/ic_baseline_account_box_24"
            android:drawablePadding="10dp"
            android:hint="@string/last_name"
            android:textColor="@color/black"
            android:textSize="24dp" />

        //phone
        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/ic_baseline_phone_iphone_24"
            android:drawablePadding="10dp"
            android:hint="@string/phone"
            android:textColor="@color/black"
            android:textSize="24dp" />

        //email
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:textSize="24dp" />

        //button Cancel
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginLeft="140dp"
            android:layout_marginRight="150dp"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_edit"/>

        //button Save
        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="290dp"
            android:layout_marginTop="-52dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/bg_edit"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/red"
            android:textSize="24dp" />


    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>